e system - allow the per system permit/deny rules to work

--- a/data/etc/system.conf
+++ b/data/etc/system.conf
@@ -24,16 +24,27 @@
 
 # FORMAT:
 # 
-# user:  username  allow: halt reboot suspend hibernate
+# user:  username  allow: rfkill
 # group: groupname deny:  *
 # group: *         deny:  *
-# user:  *         allow: suspend
-# user:  billy     allow: halt reboot
-# group: staff     deny:  halt suspend hibernate
+# user:  *         allow: power
+# user:  billy     allow: l2ping
+# group: staff     deny:  backlight
 # ... etc. ...
 #
 # user and group name can use glob matches (* == all for example) like the
 # shell. as can action names allowed or denied.
+#
+# the system to allow at the end is a system name or * for "everything". this
+# is a glob like filenames. systems supported:
+#
+# backlight - core backlight device that maps to a laptop screen or keyboard
+# ddc       - external monitor controls like backlight, color correction etc
+# storage   - handling of removable media devices
+# power     - direct shutdown/reboot/suspend/resume/halt commands
+# rfkill    - rf controls for wireless adaptors
+# l2ping    - bluetooth pings for paired devices (no payload control)
+# cpufreq   - change cpu frequency, governor and similar power controls
 
 # root is allowed to do anything - but it needs to be here explicitly anyway
 user:     root      allow: *
