Updating french and italian translations

--- a/src/modules/polkit/module.desktop
+++ b/src/modules/polkit/module.desktop
@@ -2,5 +2,7 @@
 Type=Link
 Name=Polkit
 Comment=This module provides a polkit authentication agent
+Comment[fr]=Ce module fournit un agent d'authentification polkit
+Comment[it]=Questo modulo fornisce un agente d'autenticazione per polkit
 Icon=e-module-polkit
 X-Enlightenment-ModuleType=core
