--- a/src/modules/sysinfo/module.desktop
+++ b/src/modules/sysinfo/module.desktop
@@ -2,5 +2,7 @@
 Type=Link
 Name=Sysinfo
 Comment=A gadget to visualize your system info
+Comment[fr]=Un gadget pour visualer les infos système
+Comment[it]=Un gadget per visualizzare informazioni sul sistema
 Icon=e-module-sysinfo
 X-Enlightenment-ModuleType=system
