more icons for ridiculous DM's that arbitarily change icon names
hooray for insanity and catering to it.

--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -14,8 +14,26 @@ install_data('enlightenment-askpass.png',
              install_dir: join_paths(dir_data, 'pixmaps')
             )
 install_data('enlightenment.svg',
+             install_dir: join_paths(dir_data, 'icons/hicolor/scalable/apps')
+            )
+install_data('enlightenment.svg',
              install_dir: join_paths(dir_data, 'icons/hicolor/scalable/places')
             )
 install_data('enlightenment.png',
+             install_dir: join_paths(dir_data, 'icons/hicolor/512x512/apps')
+            )
+install_data('enlightenment.png',
+             install_dir: join_paths(dir_data, 'icons/hicolor/512x512/places')
+            )
+install_data('enlightenment_badge-symbolic.svg',
+             install_dir: join_paths(dir_data, 'icons/hicolor/scalable/apps')
+            )
+install_data('enlightenment_badge-symbolic.svg',
+             install_dir: join_paths(dir_data, 'icons/hicolor/scalable/places')
+            )
+install_data('enlightenment_badge-symbolic.png',
+             install_dir: join_paths(dir_data, 'icons/hicolor/512x512/apps')
+            )
+install_data('enlightenment_badge-symbolic.png',
              install_dir: join_paths(dir_data, 'icons/hicolor/512x512/places')
             )
