try linking against execinfo when execinfo.h is present
This should fix build on systems where execinfo.h is present
but the APIs are implemented in a separate library - commonly
a case on the BSDs as well as on non-glibc libcs and so on.

--- a/meson.build
+++ b/meson.build
@@ -184,6 +184,9 @@ if cc.has_header('netinet/in.h') == true
 endif
 if cc.has_header('execinfo.h') == true
   config_h.set('HAVE_EXECINFO_H'       , '1')
+  dep_execinfo = cc.find_library('execinfo', required: false)
+else
+  dep_execinfo = dependency('', required: false)
 endif
 if cc.has_function('explicit_bzero') == true
   config_h.set('HAVE_EXPLICIT_BZERO'   , '1')
