--- a/src/modules/conf_bindings/meson.build
+++ b/src/modules/conf_bindings/meson.build
@@ -5,6 +5,7 @@ src = files(
   'e_int_config_keybindings.c',
   'e_int_config_mousebindings.c',
   'e_int_config_signalbindings.c',
+  'e_int_config_swipebindings.c',
   'e_mod_main.h'
 )
 
