modules. Small text fixes for modules, module.desktop

--- a/src/modules/conf_bindings/module.desktop
+++ b/src/modules/conf_bindings/module.desktop
@@ -15,21 +15,21 @@ Name[pt]=Definições de inserção
 Name[ru]=Настройки управления вводом
 Name[sr]=Поставке управљања уносом
 Name[tr]=Giriş Denetemi Ayarları
-Comment=Key, Mouse and Button control settings
+Comment=Key, Mouse and Button control settings.
 Comment[ca]=Configuració del teclat, ratolí i botons.
-Comment[de]=Steuerungseinstellungen der Tasten, der Maus und der Knöpfe
-Comment[eo]=Agordoj de klavoj, musoj kaj butonoj
+Comment[de]=Steuerungseinstellungen der Tasten, der Maus und der Knöpfe.
+Comment[eo]=Agordoj de klavoj, musoj kaj butonoj.
 Comment[es]=Configuraciones del ratón, teclado y botones.
-Comment[fi]=Näppäimistön, hiiren ja muiden nappien asetukset
+Comment[fi]=Näppäimistön, hiiren ja muiden nappien asetukset.
 Comment[fr]=Paramètres de contrôle des touches, boutons et souris.
-Comment[gl]=Axustes do control do teclado, rato e botóns
+Comment[gl]=Axustes do control do teclado, rato e botóns.
 Comment[hu]=Configuracións do rato, teclado e botóns.
 Comment[it]=Configurazione delle scorciatoie di tastiera e mouse.
-Comment[lt]=Klavišų, pelės bei mygtukų valdymo nustatymai
-Comment[ms]=Tetapan kawalan Kekunci, Tetikus dan Butang
-Comment[pt]=Definições do rato, teclas e botões
+Comment[lt]=Klavišų, pelės bei mygtukų valdymo nustatymai.
+Comment[ms]=Tetapan kawalan Kekunci, Tetikus dan Butang.
+Comment[pt]=Definições do rato, teclas e botões.
 Comment[ru]=Настройки управления мышью, клавишами и кнопками.
 Comment[sr]=Поставке управљањем мишем, тастатуром и дугмадима.
-Comment[tr]=Klavye, fare ve düğme denetim ayarları
+Comment[tr]=Klavye, fare ve düğme denetim ayarları.
 Icon=preferences-desktop-keyboard-shortcuts
 X-Enlightenment-ModuleType=settings
