--- a/src/modules/packagekit/module.desktop
+++ b/src/modules/packagekit/module.desktop
@@ -16,20 +16,20 @@ Name[pt]=Atualizações do sistema
 Name[ru]=Интеграция с пакетным менеджером
 Name[sr]=Склад са управником пакета
 Name[tr]=Paket Yöneticisi Bağlantısı
-Comment=Control system update status
-Comment[ca]=Estat de l'actualització del sistema
-Comment[de]=Systemaktualisierungsstatus einstellen
-Comment[eo]=Stato de ĝisdatigoj de kontrola sistemo
-Comment[es]=Contrala el estado de las actualizaciones del sistema
-Comment[fi]=Hallinnoi järjestelmän päivitysten tilaa
-Comment[fr]=État de la mise à jour du système de contrôle
-Comment[gl]=Controla o estado das actualizacións do sistema
-Comment[it]=Controlla lo stato degli aggiornamenti del sistema
+Comment=Control system update status.
+Comment[ca]=Estat de l'actualització del sistema.
+Comment[de]=Systemaktualisierungsstatus einstellen.
+Comment[eo]=Stato de ĝisdatigoj de kontrola sistemo.
+Comment[es]=Contrala el estado de las actualizaciones del sistema.
+Comment[fi]=Hallinnoi järjestelmän päivitysten tilaa.
+Comment[fr]=État de la mise à jour du système de contrôle.
+Comment[gl]=Controla o estado das actualizacións do sistema.
+Comment[it]=Controlla lo stato degli aggiornamenti del sistema.
 Comment[ja]=システム更新情報の調整
-Comment[ms]=Status kemaskini sistem kawalan
-Comment[pt]=Controlar o estado das atualizações do sistema
-Comment[ru]=Контроль за статусом системных обновлений
-Comment[sr]=Управља стањем надоградње система
-Comment[tr]=Sistem güncelleme durumu kontrolü
+Comment[ms]=Status kemaskini sistem kawalan.
+Comment[pt]=Controlar o estado das atualizações do sistema.
+Comment[ru]=Контроль за статусом системных обновлений.
+Comment[sr]=Управља стањем надоградње система.
+Comment[tr]=Sistem güncelleme durumu kontrolü.
 Icon=e-module-packagekit
 X-Enlightenment-ModuleType=system
