--- a/src/modules/systray/module.desktop
+++ b/src/modules/systray/module.desktop
@@ -17,7 +17,7 @@ Name[pt]=Área de notificação
 Name[ru]=Системный лоток
 Name[sr]=Обавештајна област
 Name[tr]=Sistem Çekmecesi
-Comment=system tray that hold applications icons like Skype, Pidgin, Kopete and others.
+Comment=System tray that hold applications icons like Skype, Pidgin, Kopete and others.
 Comment[ca]=Zona que conté les icones d'aplicacions com Skype, Pidgin, Kopete i altres.
 Comment[cs]=spravuje aplikace jako Skype, Pidgin, Kopete a jiné.
 Comment[de]=Systemleiste, die Anwendungen wie Skype, Pidgin, Kopete und andere enthält.
