--- a/src/modules/tasks/module.desktop
+++ b/src/modules/tasks/module.desktop
@@ -17,21 +17,21 @@ Name[pt]=Tarefas
 Name[ru]=Задачи
 Name[sr]=Задаци
 Name[tr]=Görevler
-Comment=Gadget to allow you to switch tasks
+Comment=Gadget to allow you to switch tasks.
 Comment[ca]=Mòdul que permet el canvi entre tasques.
-Comment[de]=Helfer, der es Ihnen erlaubt Aufgaben zu wechseln
-Comment[eo]=Akcesoraĵo kiu permesas baskuli taskojn
+Comment[de]=Helfer, der es Ihnen erlaubt Aufgaben zu wechseln.
+Comment[eo]=Akcesoraĵo kiu permesas baskuli taskojn.
 Comment[es]=Módulo que le permite el cambio entre tareas.
 Comment[fi]=Vempain jolla voit vaihtaa tehtävien välillä.
 Comment[fr]=Ce gadget vous permet de passer d'une tâche à une autre.
 Comment[gl]=Módulo que lle permite o troco de tarefas.
 Comment[it]=Gadget che permette di commutare tra i task.
 Comment[ja]=タスク切替ガジェット
-Comment[lt]=Įtaisas, leidžiantis jums persijunginėti tarp programų langų
-Comment[ms]=Gadjet yang membolehkan anda menukar tugas
-Comment[pt]=Módulo que lhe permite trocar entre tarefas
-Comment[ru]=Гаджет для переключения задач
-Comment[sr]=Справица за промену задатака
-Comment[tr]=Görevler arasında geçiş yapmayı sağlayan araç
+Comment[lt]=Įtaisas, leidžiantis jums persijunginėti tarp programų langų.
+Comment[ms]=Gadjet yang membolehkan anda menukar tugas.
+Comment[pt]=Módulo que lhe permite trocar entre tarefas.
+Comment[ru]=Гаджет для переключения задач.
+Comment[sr]=Справица за промену задатака.
+Comment[tr]=Görevler arasında geçiş yapmayı sağlayan araç.
 Icon=e-module-tasks
 X-Enlightenment-ModuleType=utils
