--- a/src/modules/xkbswitch/module.desktop
+++ b/src/modules/xkbswitch/module.desktop
@@ -17,21 +17,21 @@ Name[pt]=Teclado
 Name[ru]=Клавиатура
 Name[sr]=Тастатура
 Name[tr]=Klavye
-Comment=Keyboard layout configuration and switcher
+Comment=Keyboard layout configuration and switcher.
 Comment[ca]=Configuració i commutació de les disposicions del teclat.
-Comment[de]=Konfiguration der Tastaturanordnung und Umschalter
-Comment[eo]=Agordo de klavara arango kaj interŝanĝilo
+Comment[de]=Konfiguration der Tastaturanordnung und Umschalter.
+Comment[eo]=Agordo de klavara arango kaj interŝanĝilo.
 Comment[es]=Configuración y conmutador de las disposiciones del teclado.
-Comment[fi]=Moduuli joka mahdollistaa näppäimistöasetteluiden asetukset sekä vempaimen niiden välillä vaihtamiseen
+Comment[fi]=Moduuli joka mahdollistaa näppäimistöasetteluiden asetukset sekä vempaimen niiden välillä vaihtamiseen.
 Comment[fr]=Pour configurer et basculer l'agencement du clavier.
 Comment[gl]=Configuración e alteración das disposicións do teclado.
 Comment[it]=Per configurare e commutare il layout di tastiera.
 Comment[ja]=キーボードレイアウトの設定・切替
-Comment[lt]=Klaviatūros išdėsdymo bei jų keitiklio nustatymai
-Comment[ms]=Konfigur dan penukar bentangan papan kekunci
-Comment[pt]=Configuração e alteração dos esquemas de teclado
-Comment[ru]=Настройка и переключение раскладки клавиатуры
-Comment[sr]=Подешавања распореда и измењивача тастатуре
-Comment[tr]=Klavye yerleşim yapılandırma ve değiştirici
+Comment[lt]=Klaviatūros išdėsdymo bei jų keitiklio nustatymai.
+Comment[ms]=Konfigur dan penukar bentangan papan kekunci.
+Comment[pt]=Configuração e alteração dos esquemas de teclado.
+Comment[ru]=Настройка и переключение раскладки клавиатуры.
+Comment[sr]=Подешавања распореда и измењивача тастатуре.
+Comment[tr]=Klavye yerleşim yapılandırma ve değiştirici.
 Icon=preferences-desktop-keyboard
 X-Enlightenment-ModuleType=utils
