--- a/src/modules/music-control/module.desktop
+++ b/src/modules/music-control/module.desktop
@@ -11,20 +11,20 @@ Name[ms]=Kawalan Muzik
 Name[ru]=Контроль музыки
 Name[sr]=Управљање музиком
 Name[tr]=Müzik Denetimi
-Comment=Control your music in your shelf
-Comment[ca]=Per a controlar la música des del panell
-Comment[de]=Die Musik in Ihrem Regal stuern
+Comment=Control your music in your shelf.
+Comment[ca]=Per a controlar la música des del panell.
+Comment[de]=Die Musik in Ihrem Regal stuern.
 Comment[el]=Ελέγξτε τη μουσική σας στο ράφι σας
-Comment[eo]=Kontroli vian muzikon el via breto
-Comment[fi]=Ohjaa musiikkia hyllystäsi
-Comment[fr]=Contrôlez votre musique dans votre rayon
-Comment[it]=Per controllare la musica in esecuzione dalla mensola di sistema
+Comment[eo]=Kontroli vian muzikon el via breto.
+Comment[fi]=Ohjaa musiikkia hyllystäsi.
+Comment[fr]=Contrôlez votre musique dans votre rayon.
+Comment[it]=Per controllare la musica in esecuzione dalla mensola di sistema.
 Comment[ja]=Shelf で音楽を調整する
 Comment[ko]=선반에서 음악을 제어하세요
-Comment[ms]=Kawal muzik dalam para anda
-Comment[nl]=Beheers uw muziek op uw plank
-Comment[ru]=Модуль для управления воспроизведением музыки
-Comment[sr]=Управљајте музиком са полице
-Comment[tr]=Müziğinizi rafta kontrol edin
+Comment[ms]=Kawal muzik dalam para anda.
+Comment[nl]=Beheers uw muziek op uw plank.
+Comment[ru]=Модуль для управления воспроизведением музыки.
+Comment[sr]=Управљајте музиком са полице.
+Comment[tr]=Müziğinizi rafta kontrol edin.
 Icon=e-module-music-control
 X-Enlightenment-ModuleType=utils
