--- a/src/modules/quickaccess/module.desktop
+++ b/src/modules/quickaccess/module.desktop
@@ -16,19 +16,19 @@ Name[pt]=Acesso rápido
 Name[ru]=Быстрый доступ
 Name[sr]=Брзи приступ
 Name[tr]=Hızlıerişim
-Comment=Enlightenment Quickaccess Launcher
-Comment[ca]=Llançador de l'accés ràpid de l'Enlightenment
-Comment[de]=Enlightenment-Schnellzugriffsstarter
-Comment[eo]=Rapidatinga lanĉilo de Enlightenment
-Comment[es]=Lanzador del acceso rápido de Enlightenment
-Comment[fi]=Enlightenment Quickaccess-käynnistin
-Comment[fr]=Lanceur des accès rapides d'Enlightenment
-Comment[gl]=Iniciador do acceso rápido de Enlightenment
-Comment[it]=Lanciatore ad accesso rapido di Enlightenment
-Comment[ms]=Pelancar Capaian Pantas Enlightenment
-Comment[pt]=Acesso rápido do Enlightenment
-Comment[ru]=Модуль быстрого запуска для Enlightenment
-Comment[sr]=Јединица брзог приступа Просвећења
-Comment[tr]=Enlightenment Hızlıerişim Başlatıcısı
+Comment=Enlightenment Quickaccess Launcher.
+Comment[ca]=Llançador de l'accés ràpid de l'Enlightenment.
+Comment[de]=Enlightenment-Schnellzugriffsstarter.
+Comment[eo]=Rapidatinga lanĉilo de Enlightenment.
+Comment[es]=Lanzador del acceso rápido de Enlightenment.
+Comment[fi]=Enlightenment Quickaccess-käynnistin.
+Comment[fr]=Lanceur des accès rapides d'Enlightenment.
+Comment[gl]=Iniciador do acceso rápido de Enlightenment.
+Comment[it]=Lanciatore ad accesso rapido di Enlightenment.
+Comment[ms]=Pelancar Capaian Pantas Enlightenment.
+Comment[pt]=Acesso rápido do Enlightenment.
+Comment[ru]=Модуль быстрого запуска для Enlightenment.
+Comment[sr]=Јединица брзог приступа Просвећења.
+Comment[tr]=Enlightenment Hızlıerişim Başlatıcısı.
 Icon=e-module-quickaccess
 X-Enlightenment-ModuleType=launcher
