--- a/src/modules/syscon/module.desktop
+++ b/src/modules/syscon/module.desktop
@@ -20,21 +20,21 @@ Name[pt]=Controlos do sistema
 Name[ru]=Управление системой
 Name[sr]=Управљање системом
 Name[tr]=Sistem Kontrolleri
-Comment=This module provides a unified popup<br>dialog for all the system actions<br>in Enlightenment.
-Comment[ca]=Aquest mòdul proporciona una finestra emergent<br>unificada per a totes les accions del<br>sistema a l'Enlightenment.
-Comment[cs]=Poskytuje dialog pro všechny<br>systémové akce v Enlightenmentu.
-Comment[de]=Dieses Modul stellt einen vereinheitlichten Benachrichtigungsdialog,<br>für alle Systemaktionen in Enlightenment,<br>zur Verfügung.
-Comment[eo]=Tiu modulo vidigas ŝprucfenestron<br>kunigantan ĉiujn sistemajn agadojn<br> en Enlightenment.
-Comment[es]=Este módulo proporciona una ventana emergente<br>unificada para todos las acciones del<br>sistema en Enlightenment.
-Comment[fi]=Tämä moduuli lisää käytettäväksi yhdistetyn<br>ponnahdusikkunan kaikille Enlightenmentin<br>järjestelmätoiminnoille.
-Comment[fr]=Fournit une fenêtre de dialogue pop-up<br>regroupant toutes les actions système<br>dans Enlightenment.
-Comment[gl]=Este módulo proporciona unha alerta unificada<br>para tódalas accións do sistema<br>en Enlightenment.
-Comment[hu]=Ez a modul egy felugró ablakocskát<br>biztosít, amely segítségével az<br>Enlightenment folyamatait kísérhetjük figyelemmel
-Comment[it]=Questo modulo fornisce una finestra di dialogo popup<br>unificata per tutte le azioni di sistema in Enlightenment.
-Comment[ms]=Modul ini menyediakan dialog timbul<br>tersepadu untuk semua tindakan sistem<br>dalam Enlightenment.
+Comment=This module provides a unified popup dialog for all the system actions in Enlightenment.
+Comment[ca]=Aquest mòdul proporciona una finestra emergent unificada per a totes les accions del sistema a l'Enlightenment.
+Comment[cs]=Poskytuje dialog pro všechny systémové akce v Enlightenmentu.
+Comment[de]=Dieses Modul stellt einen vereinheitlichten Benachrichtigungsdialog, für alle Systemaktionen in Enlightenment, zur Verfügung.
+Comment[eo]=Tiu modulo vidigas ŝprucfenestron kunigantan ĉiujn sistemajn agadojn  en Enlightenment.
+Comment[es]=Este módulo proporciona una ventana emergente unificada para todos las acciones del sistema en Enlightenment.
+Comment[fi]=Tämä moduuli lisää käytettäväksi yhdistetyn ponnahdusikkunan kaikille Enlightenmentin järjestelmätoiminnoille.
+Comment[fr]=Fournit une fenêtre de dialogue pop-up regroupant toutes les actions système dans Enlightenment.
+Comment[gl]=Este módulo proporciona unha alerta unificada para tódalas accións do sistema en Enlightenment.
+Comment[hu]=Ez a modul egy felugró ablakocskát biztosít, amely segítségével az Enlightenment folyamatait kísérhetjük figyelemmel
+Comment[it]=Questo modulo fornisce una finestra di dialogo popup unificata per tutte le azioni di sistema in Enlightenment.
+Comment[ms]=Modul ini menyediakan dialog timbul tersepadu untuk semua tindakan sistem dalam Enlightenment.
 Comment[pt]=Disponibiliza o acesso ao sistema de ações do Enlightenment
-Comment[ru]=Этот модуль обеспечивает единое<br>диалоговое окно для всех системных действий<br>в Enlightenment.
-Comment[sr]=Ова јединица омогућава јединствени искачући<br>прозор за све системске радње<br>у Просвећењу
-Comment[tr]=Tüm sistem eylemleri için özelleştirilmiş<br>açılır pencere diyaloğu sunan Enlightenment modülü.
+Comment[ru]=Этот модуль обеспечивает единое диалоговое окно для всех системных действий в Enlightenment.
+Comment[sr]=Ова јединица омогућава јединствени искачући прозор за све системске радње у Просвећењу
+Comment[tr]=Tüm sistem eylemleri için özelleştirilmiş açılır pencere diyaloğu sunan Enlightenment modülü.
 Icon=e-module-syscon
 X-Enlightenment-ModuleType=core
