gesture_recognizer: add icon
thank you very much jf_simon for this icon! :)

--- a/src/modules/gesture_recognition/module.desktop
+++ b/src/modules/gesture_recognition/module.desktop
@@ -2,5 +2,5 @@
 Type=Link
 Name=Gesture Recognition
 Comment=Gesture recognition using libinput
-Icon=e-module-start
+Icon=e-module-gesture_recognition
 X-Enlightenment-ModuleType=utils
