Updating french translation

--- a/src/modules/appmenu/module.desktop
+++ b/src/modules/appmenu/module.desktop
@@ -19,7 +19,7 @@ Comment=Gadget that holds the menubar of the foreground application.
 Comment[ca]=Giny que conté la barra de menú de les aplicacions executades en primer pla.
 Comment[eo]=Akcesoraĵo kiu tenas la menuo-breton de la dialoga aplikaĵo.
 Comment[fi]=Vempain joka sisältää valitun ikkunan valikkopalkin.
-Comment[fr]=Gadget qui maintient la barre de menu de l'application d'arrière plan.
+Comment[fr]=Gadget contenant la barre de menus de l'application au premier plan
 Comment[it]=Gadget che contiene la barra degli strumenti dell'applicazione in primo piano.
 Comment[ms]=Gadjet yang memegang palang menu bagi aplikasi hadapan.
 Comment[ru]=Гаджет отображающий меню активного приложения.
