--- a/src/modules/packagekit/module.desktop
+++ b/src/modules/packagekit/module.desktop
@@ -6,7 +6,7 @@ Name[de]=Paketverwaltungsintegration
 Name[eo]=Integrado de pakaĵadministrilo
 Name[es]=Actualizaciones del sistema
 Name[fi]=Järjestelmän päivitykset
-Name[fr]=Intégration du gestionnaire de paquets
+Name[fr]=Gestionnaire de paquets intégré
 Name[gl]=Actualizacións do sistema
 Name[it]=Aggiornamenti di sistema
 Name[ko]=패키지 관리자 통합
@@ -22,7 +22,7 @@ Comment[de]=Systemaktualisierungsstatus einstellen.
 Comment[eo]=Stato de ĝisdatigoj de kontrola sistemo.
 Comment[es]=Contrala el estado de las actualizaciones del sistema.
 Comment[fi]=Hallinnoi järjestelmän päivitysten tilaa.
-Comment[fr]=État de la mise à jour du système de contrôle.
+Comment[fr]=Contrôle l'état de mise à jour du système.
 Comment[gl]=Controla o estado das actualizacións do sistema.
 Comment[it]=Controlla lo stato degli aggiornamenti del sistema.
 Comment[ja]=システム更新情報の調整
