--- a/src/modules/music-control/module.desktop
+++ b/src/modules/music-control/module.desktop
@@ -5,7 +5,7 @@ Name[ca]=Control musical
 Name[de]=Musiksteuerung
 Name[eo]=Muziko-kontrolilo
 Name[fi]=Musiikinhallinta
-Name[fr]=Contrôle de la musique
+Name[fr]=Contrôleur média
 Name[lt]=Muzikos valdymas
 Name[ms]=Kawalan Muzik
 Name[ru]=Контроль музыки
@@ -17,7 +17,7 @@ Comment[de]=Die Musik in Ihrem Regal stuern.
 Comment[el]=Ελέγξτε τη μουσική σας στο ράφι σας
 Comment[eo]=Kontroli vian muzikon el via breto.
 Comment[fi]=Ohjaa musiikkia hyllystäsi.
-Comment[fr]=Contrôlez votre musique dans votre rayon.
+Comment[fr]=Contrôle de la lecture multimédia depuis le rayon.
 Comment[it]=Per controllare la musica in esecuzione dalla mensola di sistema.
 Comment[ja]=Shelf で音楽を調整する
 Comment[ko]=선반에서 음악을 제어하세요
