Updating french and italian translations

--- a/src/modules/gesture_recognition/module.desktop
+++ b/src/modules/gesture_recognition/module.desktop
@@ -1,6 +1,10 @@
 [Desktop Entry]
 Type=Link
 Name=Gesture Recognition
-Comment=Gesture recognition using libinput
+Name[fr]=Reconnaissance des gestes
+Name[it]=Riconoscimento gesture
+Comment=Gesture recognition using libinput.
+Comment[fr]=Reconnaissance des gestes utilisant libinput.
+Comment[it]=Riconoscimento delle gesture per mezzo di libinput.
 Icon=e-module-gesture_recognition
 X-Enlightenment-ModuleType=utils
