e - systemd -= as long as enabled allow to build without it
we know where service files SHOULD go... and soif systemd is not there
to tell us, put them in the known place. this is so the non0systemd
os's can buand should build with the support but its all runtime
detected/enabled already. this means that actually no one should need
tyo go disable systemd support in builds. it's all runtime.

--- a/meson.build
+++ b/meson.build
@@ -242,8 +242,12 @@ systemd_unitdir = ''
 if get_option('systemd') == true
   systemd_unitdir = get_option('systemdunitdir')
   if systemd_unitdir == ''
-    dep_systemd = dependency('systemd', required: true)
-    systemd_unitdir = dep_systemd.get_pkgconfig_variable('systemduserunitdir')
+    dep_systemd = dependency('systemd', required: false)
+    if dep_systemd.found()
+      systemd_unitdir = dep_systemd.get_pkgconfig_variable('systemduserunitdir')
+    else
+      systemd_unitdir = join_paths(dir_lib, 'systemd', 'user')
+    endif
   endif
 endif
 
