--- a/data/desktop/enlightenment_filemanager.desktop
+++ b/data/desktop/enlightenment_filemanager.desktop
@@ -7,7 +7,7 @@ Name[de]=Enlightenment-Dateiverwaltung
 Name[eo]=Dosieradministrilo de Enlightenment
 Name[es]=Administrador de archivos de Enlightenment
 Name[fi]=Enlightenment-tiedostonhallinta
-Name[fr]=Gestionnaire de fichiers d'Enlightenment
+Name[fr]=Gestionnaire de fichiers EFM
 Name[gl]=Xestor de ficheiros de Enlightenment
 Name[it]=Filemanager di Enlightenment
 Name[ja]=Enlightenment ファイルマネージャー
