vkbd: add comment to module.desktop
Reviewers: devilhorns, raster

Reviewed By: raster

Subscribers: cedric, zmike

Tags: #enlightenment-git

Differential Revision: https://phab.enlightenment.org/D12190

--- a/src/modules/vkbd/module.desktop
+++ b/src/modules/vkbd/module.desktop
@@ -3,5 +3,6 @@ Type=Link
 Name=Virtual Keyboard
 Name[fr]=Clavier virtuel
 Name[it]=Tastiera virtuale
+Comment=Shows a virtual keyboard.
 Icon=e-module-vkbd
 X-Enlightenment-ModuleType=mobile
