add comment to module.desktop
Reviewers: devilhorns, raster

Reviewed By: raster

Subscribers: cedric, zmike

Tags: #enlightenment-git

Differential Revision: https://phab.enlightenment.org/D12189

--- a/src/modules/bluez5/module.desktop
+++ b/src/modules/bluez5/module.desktop
@@ -9,5 +9,6 @@ Name[ja]=Bluez5
 Name[ms]=Bluez5
 Name[sr]=Блуез5
 Name[tr]=Bluetooth
+Comment=Bluetooth control Gadget.
 Icon=e-module-bluez5
 X-Enlightenment-ModuleType=utils
