Updating french and italian translations

--- a/src/modules/bluez5/module.desktop
+++ b/src/modules/bluez5/module.desktop
@@ -10,5 +10,7 @@ Name[ms]=Bluez5
 Name[sr]=Блуез5
 Name[tr]=Bluetooth
 Comment=Bluetooth control Gadget.
+Comment[fr]=Gadget de configuration Bluetooth.
+Comment[it]=Gadget di controllo del Bluetooth.
 Icon=e-module-bluez5
 X-Enlightenment-ModuleType=utils
