--- a/src/modules/vkbd/module.desktop
+++ b/src/modules/vkbd/module.desktop
@@ -4,5 +4,7 @@ Name=Virtual Keyboard
 Name[fr]=Clavier virtuel
 Name[it]=Tastiera virtuale
 Comment=Shows a virtual keyboard.
+Comment[fr]=Affiche un clavier virtuel.
+Comment[it]=Mostra una tastiera virtuale.
 Icon=e-module-vkbd
 X-Enlightenment-ModuleType=mobile
