--- a/src/modules/ibar/module.desktop
+++ b/src/modules/ibar/module.desktop
@@ -22,7 +22,7 @@ Comment[el]=Εικονικός εκκινητής εφαρμογών.
 Comment[eo]=Lanĉilo de piktograma aplikaĵo.
 Comment[es]=Lanzador de aplicaciones con íconos.
 Comment[fi]=Ikoninen sovelluskäynnistin.
-Comment[fr]=Barre d'icones permettant de lancer des applications.
+Comment[fr]=Barre d'icônes permettant de lancer des applications.
 Comment[gl]=Unha barra de iconas para iniciar aplicativos.
 Comment[hu]=Ikonokkal bővíthető alkalmazásindító modul.
 Comment[it]=Una barra di icone per il lancio di applicazioni.
