--- a/src/modules/systray/module.desktop
+++ b/src/modules/systray/module.desktop
@@ -24,7 +24,7 @@ Comment[de]=Systemleiste, die Anwendungen wie Skype, Pidgin, Kopete und andere e
 Comment[el]=Μια μπάρα ενδείξεων που εμφανίζει εφαρμογές όπως το Skype, το Pidgin, το Kopete και άλλα.
 Comment[eo]=zono kiu vidigas la piktogramojn de aplikaĵoj kiel Skajpo, Pidgin, Kopete kaj aliaj.
 Comment[es]=Una bandeja del sistema que contiene los iconos de notificación de aplicaciones como Skype, Pidgin, Kopete y otras.
-Comment[fr]=Une zone qui reçoit les icones des applications comme Skype, Pidgin, Kopete et autres.
+Comment[fr]=Une zone qui reçoit les icônes des applications comme Skype, Pidgin, Kopete et autres.
 Comment[gl]=Unha bandexa do sistema que contén as iconas de notificación de aplicativos como Pidgin, Kopete e outros.
 Comment[it]=Un'area che contiene le icone di notifica di applicazioni come Skype, Pidgin, Kopete e altre.
 Comment[lt]=sistemos dėklas, kuriame rodomos fone veikiančių programų ikonėlės, pvz. Skype, Pidgin, VLC ar kitos.
