--- a/src/modules/wizard/data/desktop/root.desktop
+++ b/src/modules/wizard/data/desktop/root.desktop
@@ -5,7 +5,7 @@ Name[ca]=Arrel
 Name[de]=Basisordner
 Name[eo]=Radiko
 Name[fi]=Juuri
-Name[fr]=Dossier racine
+Name[fr]=Racine
 Name[gl]=Raíz
 Name[ja]=Root
 Name[ms]=Root
