watchdog - add a watchdog thread that pings mainloop every 10sec
if the main loop were to hang for some reason, this would detect it,
forcibly exit e and e_start can restart e again so things are working.

@feat

--- a/src/bin/meson.build
+++ b/src/bin/meson.build
@@ -186,6 +186,7 @@ src = [
   'e_user.c',
   'e_utils.c',
   'e_video.c',
+  'e_watchdog.c',
   'e_widget_aspect.c',
   'e_widget_button.c',
   'e_widget.c',
@@ -363,6 +364,7 @@ hdr = [
   'e_user.h',
   'e_utils.h',
   'e_video.h',
+  'e_watchdog.h',
   'e_widget_aspect.h',
   'e_widget_button.h',
   'e_widget_check.h',
