Updating french translation

--- a/src/modules/procstats/module.desktop
+++ b/src/modules/procstats/module.desktop
@@ -2,7 +2,7 @@
 Type=Link
 Name=Procstats
 Comment=Monitor window process resources.
+Comment[fr]=Affiche les ressources utilisées par les processus de la fenêtre.
 Comment[it]=Monitorizza le risorse dei processi delle finestre.
-Comment[fr]=Surveillance des ressources du processus des fenêtres.
 Icon=e-module-procstats
 X-Enlightenment-ModuleType=system
