Updating french translation

--- a/src/modules/fileman_opinfo/module.desktop
+++ b/src/modules/fileman_opinfo/module.desktop
@@ -7,7 +7,7 @@ Name[de]=EFM-Betriebsinformation
 Name[eo]=Aktualaj operacioj en EFM
 Name[es]=Información de las operaciones de EFM
 Name[fi]=EFM-toimintotiedot
-Name[fr]=Informations EFM
+Name[fr]=Infos d'opération EFM
 Name[gl]=Información das operacións de EFM
 Name[it]=Informazioni operazioni EFM
 Name[ja]=EFM 操作情報
