Updating french translation

--- a/src/modules/syscon/module.desktop
+++ b/src/modules/syscon/module.desktop
@@ -7,7 +7,7 @@ Name[de]=Systemsteuerungen
 Name[eo]=Kontroloj de sistemo
 Name[es]=Controles del sistema
 Name[fi]=Järjestelmän hallinta
-Name[fr]=Contrôles du système
+Name[fr]=Commandes système
 Name[gl]=Controis do sistema
 Name[hu]=Rendszer felügyelő
 Name[it]=Syscon
