--- a/src/modules/wl_desktop_shell/module.desktop
+++ b/src/modules/wl_desktop_shell/module.desktop
@@ -15,7 +15,7 @@ Comment[ca]=Escriptori Shell Enlightenment Wayland
 Comment[de]=Enlightenment-Wayland-Schreibtischschale
 Comment[eo]=Labortabla ŝelo de Enlightenment por Wayland
 Comment[fi]=Enlightenmentin Wayland-työpöytäliittymä
-Comment[fr]=Implémentation du protocole Wayland pour Enlightenment
+Comment[fr]=Implémentation du protocole Wayland pour Enlightenment.
 Comment[it]=Desktop shell per Wayland di Enlightenment
 Comment[ms]=Shell Desktop Wayland Enlightenment
 Comment[sr]=Шкољка Просвећења радне површи Вејланда
