--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -18,9 +18,6 @@ src/bin/e_bg.c
 src/bin/e_bg.h
 src/bin/e_bindings.c
 src/bin/e_bindings.h
-src/bin/e_bryce.c
-src/bin/e_bryce_editor.c
-src/bin/e_bryce.h
 src/bin/e_ckpasswd_main.c
 src/bin/e_client.c
 src/bin/e_client.h
@@ -49,6 +46,8 @@ src/bin/e_comp_wl.h
 src/bin/e_comp_wl_input.c
 src/bin/e_comp_wl_input.h
 src/bin/e_comp_x.c
+src/bin/e_comp_x_devices.c
+src/bin/e_comp_x_devices.h
 src/bin/e_comp_x.h
 src/bin/e_comp_x_randr.c
 src/bin/e_comp_x_randr.h
@@ -148,11 +147,6 @@ src/bin/e_gadcon.c
 src/bin/e_gadcon.h
 src/bin/e_gadcon_popup.c
 src/bin/e_gadcon_popup.h
-src/bin/e_gadget.c
-src/bin/e_gadget.h
-src/bin/e_gadget_loader.c
-src/bin/e_gadget_runner.c
-src/bin/e_gadget_types.h
 src/bin/e_grab_dialog.c
 src/bin/e_grab_dialog.h
 src/bin/e_grabinput.c
@@ -299,9 +293,12 @@ src/bin/e_user.c
 src/bin/e_user.h
 src/bin/e_utils.c
 src/bin/e_utils.h
+src/bin/e_util_suid.h
 src/bin/e_video.c
 src/bin/e_video.h
 src/bin/e_wallpaper_gen_main.c
+src/bin/e_watchdog.c
+src/bin/e_watchdog.h
 src/bin/e_widget_aspect.c
 src/bin/e_widget_aspect.h
 src/bin/e_widget_bgpreview.c
@@ -384,9 +381,6 @@ src/modules/appmenu/e_mod_appmenu_render.c
 src/modules/appmenu/e_mod_dbus_registrar_server.c
 src/modules/appmenu/e_mod_main.c
 src/modules/backlight/e_mod_main.c
-src/modules/backlight/gadget/backlight.c
-src/modules/backlight/gadget/backlight.h
-src/modules/backlight/gadget/mod.c
 src/modules/battery/batget.c
 src/modules/battery/e_mod_config.c
 src/modules/battery/e_mod_main.c
@@ -417,6 +411,7 @@ src/modules/conf_bindings/e_int_config_edgebindings.c
 src/modules/conf_bindings/e_int_config_keybindings.c
 src/modules/conf_bindings/e_int_config_mousebindings.c
 src/modules/conf_bindings/e_int_config_signalbindings.c
+src/modules/conf_bindings/e_int_config_swipebindings.c
 src/modules/conf_bindings/e_mod_main.c
 src/modules/conf_bindings/e_mod_main.h
 src/modules/conf_dialogs/e_int_config_dialogs.c
@@ -533,6 +528,7 @@ src/modules/gadman/e_mod_gadman.c
 src/modules/gadman/e_mod_gadman.h
 src/modules/gadman/e_mod_main.c
 src/modules/geolocation/e_mod_main.c
+src/modules/gesture_recognition/e_mod_main.c
 src/modules/ibar/e_mod_config.c
 src/modules/ibar/e_mod_main.c
 src/modules/ibar/e_mod_main.h
@@ -543,26 +539,19 @@ src/modules/layout/e_mod_main.c
 src/modules/lokker/e_mod_main.c
 src/modules/lokker/e_mod_main.h
 src/modules/lokker/lokker.c
-src/modules/luncher/bar.c
-src/modules/luncher/config.c
-src/modules/luncher/grid.c
-src/modules/luncher/luncher.h
-src/modules/luncher/mod.c
+src/modules/mixer/backend.c
+src/modules/mixer/backend.h
 src/modules/mixer/emixer.c
 src/modules/mixer/e_mod_config.c
 src/modules/mixer/e_mod_config.h
 src/modules/mixer/e_mod_main.c
 src/modules/mixer/e_mod_main.h
-src/modules/mixer/gadget/backend.c
-src/modules/mixer/gadget/backend.h
-src/modules/mixer/gadget/mixer.c
-src/modules/mixer/gadget/mixer.h
-src/modules/mixer/gadget/mod.c
 src/modules/mixer/lib/backends/alsa/alsa.c
 src/modules/mixer/lib/backends/pulseaudio/pulse.c
 src/modules/mixer/lib/backends/pulseaudio/pulse_ml.c
 src/modules/mixer/lib/emix.c
 src/modules/mixer/lib/emix.h
+src/modules/mixer/mixer.h
 src/modules/msgbus/e_mod_main.c
 src/modules/msgbus/e_mod_main.h
 src/modules/msgbus/msgbus_audit.c
@@ -588,14 +577,13 @@ src/modules/packagekit/e_mod_packagekit.h
 src/modules/pager/e_mod_config.c
 src/modules/pager/e_mod_main.c
 src/modules/pager/e_mod_main.h
-src/modules/pager/gadget/config.c
-src/modules/pager/gadget/mod.c
-src/modules/pager/gadget/pager.c
-src/modules/pager/gadget/pager.h
 src/modules/polkit/auth_ui.c
 src/modules/polkit/e_mod_main.c
 src/modules/polkit/e_mod_main.h
 src/modules/polkit/polkit.c
+src/modules/procstats/e_mod_main.c
+src/modules/procstats/process.c
+src/modules/procstats/process.h
 src/modules/quickaccess/e_mod_config.c
 src/modules/quickaccess/e_mod_main.c
 src/modules/quickaccess/e_mod_main.h
@@ -611,46 +599,11 @@ src/modules/shot/e_mod_save.c
 src/modules/shot/e_mod_share.c
 src/modules/shot/upload.c
 src/modules/start/e_mod_main.c
-src/modules/start/start.c
 src/modules/syscon/e_int_config_syscon.c
 src/modules/syscon/e_mod_main.c
 src/modules/syscon/e_mod_main.h
 src/modules/syscon/e_syscon.c
 src/modules/syscon/e_syscon_gadget.c
-src/modules/sysinfo/batman/batman.c
-src/modules/sysinfo/batman/batman_config.c
-src/modules/sysinfo/batman/batman_fallback.c
-src/modules/sysinfo/batman/batman.h
-src/modules/sysinfo/batman/batman_sysctl.c
-src/modules/sysinfo/batman/batman_udev.c
-src/modules/sysinfo/batman/batman_upower.c
-src/modules/sysinfo/cpuclock/cpuclock.c
-src/modules/sysinfo/cpuclock/cpuclock_config.c
-src/modules/sysinfo/cpuclock/cpuclock.h
-src/modules/sysinfo/cpumonitor/cpumonitor.c
-src/modules/sysinfo/cpumonitor/cpumonitor_config.c
-src/modules/sysinfo/cpumonitor/cpumonitor.h
-src/modules/sysinfo/cpumonitor/cpumonitor_proc.c
-src/modules/sysinfo/cpumonitor/cpumonitor_sysctl.c
-src/modules/sysinfo/memusage/memusage.c
-src/modules/sysinfo/memusage/memusage_config.c
-src/modules/sysinfo/memusage/memusage.h
-src/modules/sysinfo/memusage/memusage_proc.c
-src/modules/sysinfo/memusage/memusage_sysctl.c
-src/modules/sysinfo/mod.c
-src/modules/sysinfo/netstatus/netstatus.c
-src/modules/sysinfo/netstatus/netstatus_config.c
-src/modules/sysinfo/netstatus/netstatus.h
-src/modules/sysinfo/netstatus/netstatus_proc.c
-src/modules/sysinfo/netstatus/netstatus_sysctl.c
-src/modules/sysinfo/sysinfo.c
-src/modules/sysinfo/sysinfo.h
-src/modules/sysinfo/thermal/thermal.c
-src/modules/sysinfo/thermal/thermal_config.c
-src/modules/sysinfo/thermal/thermal_fallback.c
-src/modules/sysinfo/thermal/thermal.h
-src/modules/sysinfo/thermal/thermal_sysctl.c
-src/modules/sysinfo/thermal/thermal_udev.c
 src/modules/systray/e_mod_main.c
 src/modules/systray/e_mod_main.h
 src/modules/systray/e_mod_notifier_host.c
@@ -660,29 +613,15 @@ src/modules/systray/e_mod_notifier_watcher.c
 src/modules/tasks/e_mod_config.c
 src/modules/tasks/e_mod_main.c
 src/modules/tasks/e_mod_main.h
-src/modules/teamwork/e_mod_config.c
-src/modules/teamwork/e_mod_main.c
-src/modules/teamwork/e_mod_main.h
-src/modules/teamwork/e_mod_tw.c
-src/modules/teamwork/wl.c
-src/modules/teamwork/wl_teamwork.c
-src/modules/teamwork/wl_teamwork.h
-src/modules/teamwork/x11.c
 src/modules/temperature/e_mod_config.c
 src/modules/temperature/e_mod_main.c
 src/modules/temperature/e_mod_main.h
 src/modules/temperature/e_mod_tempget.c
-src/modules/temperature/e_mod_udev.c
 src/modules/tiling/e_mod_config.c
 src/modules/tiling/e_mod_tiling.c
 src/modules/tiling/e_mod_tiling.h
 src/modules/tiling/window_tree.c
 src/modules/tiling/window_tree.h
-src/modules/time/clock.c
-src/modules/time/clock.h
-src/modules/time/config.c
-src/modules/time/mod.c
-src/modules/time/time.c
 src/modules/vkbd/e_kbd_buf.c
 src/modules/vkbd/e_kbd_buf.h
 src/modules/vkbd/e_kbd_cfg.c
@@ -700,10 +639,6 @@ src/modules/winlist/e_mod_main.c
 src/modules/winlist/e_mod_main.h
 src/modules/winlist/e_winlist.c
 src/modules/winlist/e_winlist.h
-src/modules/wireless/connman.c
-src/modules/wireless/mod.c
-src/modules/wireless/wireless.c
-src/modules/wireless/wireless.h
 src/modules/wizard/e_mod_main.c
 src/modules/wizard/e_wizard_api.h
 src/modules/wizard/e_wizard.c
@@ -751,8 +686,5 @@ src/modules/xkbswitch/e_mod_main.c
 src/modules/xkbswitch/e_mod_main.h
 src/modules/xkbswitch/e_mod_parse.c
 src/modules/xkbswitch/e_mod_parse.h
-src/modules/xkbswitch/gadget/mod.c
-src/modules/xkbswitch/gadget/xkbswitch.c
-src/modules/xkbswitch/gadget/xkbswitch.h
 src/modules/xwayland/dnd.c
 src/modules/xwayland/e_mod_main.c
